--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -15,6 +15,7 @@
 @import "./pages/profile";
 @import "./pages/notFound";
 @import "./pages/pay";
+@import "./pages/forgotPassword";
 
 // Sections
 @import "./pages/section/hero";
