--- a/src/assets/scss/pages/_forgotPassword.scss
+++ b/src/assets/scss/pages/_forgotPassword.scss
@@ -1,4 +1,4 @@
-.login {
+.forgotPassword {
   .container {
     .row {
       align-items: center;
@@ -11,7 +11,7 @@
         font-family: Helvetica;
         font-size: 14px;
         padding: 0 28px;
-        .loginEnter {
+        .forgotPasswordEnter {
           margin: 0 auto;
           .logo {
             img {
@@ -30,8 +30,17 @@
             font-weight: 600;
             margin-bottom: 30px;
           }
+          .forgotPasswordInfo {
+            padding-bottom: 15px;
+            font-family: HelveticaNeue, Helvetica !important;
+            line-height: 22px;
+            text-align: center;
+            max-width: 40ch;
+            color: #8d8d8d;
+          }
         }
         form {
+          margin-top: 20px;
           .userBox {
             input {
               margin: 5px 0;
@@ -47,45 +56,14 @@
               padding: 0 16px;
               width: 100%;
             }
+            .error-message {
+              color: red;
+            }
           }
         }
       }
       .info {
-        padding: 20px 28px;
-        .middle {
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          font-size: 12px;
-          gap: 35px;
-          .checkBox {
-            color: #8d8d8d;
-            input {
-              margin-right: 10px;
-            }
-          }
-          .forgotPassword {
-            a {
-              color: #bcbcbc;
-            }
-          }
-        }
-        .bottom {
-          margin: 0 auto;
-          p {
-            text-align: center;
-            cursor: pointer;
-            margin: 20px auto;
-            font-size: 12px;
-            line-height: 16px;
-            padding: 3px 0 24px;
-            max-width: 38ch;
-            color: #8d8d8d;
-            span {
-              text-decoration: underline;
-            }
-          }
-        }
+        margin-top: 30px;
         .operation {
           margin: 5px 0;
           button {
@@ -103,6 +81,7 @@
           }
         }
         .membership {
+          margin-top: 30px;
           p {
             font-size: 12px;
             line-height: 14px;
