--- a/src/assets/scss/components/_footer.scss
+++ b/src/assets/scss/components/_footer.scss
@@ -78,6 +78,7 @@
         display: flex;
         .bottomFooterLeft {
           display: flex;
+          align-items: center;
           gap: 20px;
           a {
             color: #fff;
@@ -90,7 +91,7 @@
           }
           .location {
             width: 14px;
-            height: 14px;
+            height: 10px;
             filter: invert(100%);
           }
         }
