--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -16,6 +16,7 @@
 @import "./pages/notFound";
 @import "./pages/pay";
 @import "./pages/forgotPassword";
+@import "./pages/resetPassword";
 
 // Sections
 @import "./pages/section/hero";
