--- a/src/assets/scss/pages/_profile.scss
+++ b/src/assets/scss/pages/_profile.scss
@@ -33,6 +33,10 @@
           background-size: 96px 96px;
           border-radius: 50%;
           background-color: rgb(229, 229, 229);
+          img{
+            width: 100%;
+            height: 100%;
+          }
         }
         .profileInfo {
           margin-left: 20px;
