--- a/src/assets/scss/components/_topheader.scss
+++ b/src/assets/scss/components/_topheader.scss
@@ -41,7 +41,7 @@
         right: 20px;
         display: flex;
         width: 50%;
-        justify-content: end;
+        justify-content: flex-end;
         .profileInfo {
           padding-top: 9px;
           display: flex;
