--- a/src/assets/scss/pages/_cart.scss
+++ b/src/assets/scss/pages/_cart.scss
@@ -68,7 +68,7 @@
                   margin-left: 10px;
                   transition: all 0.2s ease 0s;
                   .icons.favorited {
-                    fill: red;
+                    fill: #000;
                   }
                   .icons {
                     width: 24px;
