--- a/src/assets/scss/components/_footer.scss
+++ b/src/assets/scss/components/_footer.scss
@@ -131,7 +131,7 @@
   }
 }
 
-//Responsiveness
+//?Responsiveness
 
 @media (max-width: 768px) {
   .footer {
@@ -294,3 +294,4 @@
     }
   }
 }
+//?Responsiveness
