--- a/src/assets/scss/components/_header.scss
+++ b/src/assets/scss/components/_header.scss
@@ -497,7 +497,8 @@
   z-index: 100;
 }
 
-//Responsiveness
+//?Responsiveness
+
 
 @media (max-width: 1024px) {
   .header {
@@ -535,3 +536,4 @@
   }
 }
 
+//?Responsiveness
