--- a/src/assets/scss/components/_topheader.scss
+++ b/src/assets/scss/components/_topheader.scss
@@ -108,8 +108,12 @@
   }
 }
 
+//?Responsiveness
+
+
 @media (max-width: 1024px) {
   .topHeaderArea {
     display: none;
   }
 }
+//?Responsiveness
