--- a/src/assets/scss/components/_trendProduct.scss
+++ b/src/assets/scss/components/_trendProduct.scss
@@ -84,7 +84,8 @@
 }
 
 
-//Responsiveness
+//?Responsiveness
+
 
 @media(max-width:468px){
   .trendProduct {
@@ -172,3 +173,4 @@
     }
   }
 }
+//?Responsiveness
