--- a/src/assets/scss/pages/_shop.scss
+++ b/src/assets/scss/pages/_shop.scss
@@ -121,6 +121,8 @@
   }
 }
 
+//?Responsiveness
+
 @media (max-width: 768px) {
   .shop {
     margin-bottom: 30px;
@@ -158,3 +160,5 @@
     width: 300px;
   }
 }
+
+//?Responsiveness
