--- a/src/assets/scss/pages/section/_explore.scss
+++ b/src/assets/scss/pages/section/_explore.scss
@@ -64,7 +64,7 @@
   }
 }
 
-//Responsiveness
+//?Responsiveness
 
 @media (max-width: 1024px) {
   .explore {
@@ -106,3 +106,4 @@
     }
   }
 }
+//?Responsiveness
