--- a/src/assets/scss/pages/section/_merchMenu.scss
+++ b/src/assets/scss/pages/section/_merchMenu.scss
@@ -28,7 +28,8 @@
   }
 }
 
-//Responsiveness
+//?Responsiveness
+
 
 @media (max-width:468px){
   .merchMenu {
@@ -50,3 +51,4 @@
     }
   }
 }
+//?Responsiveness
