--- a/src/assets/scss/pages/section/_mixedNikePhotos.scss
+++ b/src/assets/scss/pages/section/_mixedNikePhotos.scss
@@ -69,6 +69,9 @@
   }
 }
 
+//?Responsiveness
+
+
 @media (max-width: 1024px) {
   .MixedNikePhotos {
     .row {
@@ -120,3 +123,4 @@
     }
   }
 }
+//?Responsiveness
