--- a/src/assets/scss/pages/_cart.scss
+++ b/src/assets/scss/pages/_cart.scss
@@ -142,7 +142,8 @@
   }
 }
 
-//Responsiveness
+//?Responsiveness
+
 
 @media (max-width: 768px) {
   .cart {
@@ -172,3 +173,4 @@
     }
   }
 }
+//?Responsiveness
