--- a/src/assets/scss/pages/_productDetails.scss
+++ b/src/assets/scss/pages/_productDetails.scss
@@ -186,7 +186,8 @@
   }
 }
 
-//Responsiveness
+//?Responsiveness
+
 
 @media (max-width: 1024px) {
   .productDetails {
@@ -240,3 +241,4 @@
     }
   }
 }
+//?Responsiveness
